--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ a.internal-link:hover {
 <div class="flow-arrow">↓ YES → Continue | ↓ NO → Route to GYB</div>
 
 <div class="flow-step" style="background:#d1ecf1;border-color:#17a2b8">
-<strong>STEP 3:</strong> Check <a href="#copart-matrix-quick" class="internal-link">Copart Assignment Matrix</a>
+<strong>STEP 3:</strong> Check the Copart Assignment Matrix below
 </div>
 <div class="flow-arrow">↓</div>
 
